fixing spacing bugs

--- a/styles/products/listProducts.module.css
+++ b/styles/products/listProducts.module.css
@@ -7,7 +7,7 @@
   top: 0;
   bottom: 0;
   right: 100%;
-  margin-right: -225px;
+  margin-right: -207px;
   background: #f5f5f5;
   z-index: -10;
 }
